# nerve-layer

./: .gitattributes  .gitignore  README.md  pyproject.toml  routing-table.yaml
bus/: event_bus.py  pending-events.json  query_handler.py  retry.py
mcp/: __init__.py  figma_connector.py  github_connector.py  linear_connector.py
schemas/: event.schema.yaml
schemas/events/: adapter.fidelity.report.yaml  adr.approved.yaml  adr.stale.yaml  adr.superseded.yaml  brief.published.yaml  code.pushed.yaml  design.component.changed.yaml  design.token.updated.yaml  feature.scope.alert.yaml  harness.task.blocked.yaml  harness.task.complete.yaml  pr.merged.yaml  project.status.changed.yaml  query.request.yaml  query.result.yaml  skill.updated.yaml
tests/: test_figma_connector.py  test_github_connector.py  test_linear_connector.py  test_query_handler.py  test_retry.py  test_routing_table_requires_human.py  test_schema_validation.py
tests/fixtures/: brief_published_valid.json
validator/: __init__.py  validate.py
